<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:id="@+id/carDetailsHeaderTv"
      style="@style/SectionHeader"
      android:layout_marginBottom="4dp"
      android:layout_marginStart="@dimen/attribute_row_side_margin"
      android:layout_marginTop="4dp"
      android:text="@string/details_car_header" />

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/white"
      card_view:cardElevation="2dp"
      card_view:cardUseCompatPadding="true"
      card_view:contentPadding="@dimen/attribute_list_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/carAttributeModelYearTv"
          style="@style/AttributeRowLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/attribute_row_bottom_margin"
          android:textStyle="bold"
          tools:text="Ford (2009)" />

      <TextView
          style="@style/AttributeRowLabel"
          android:text="@string/attribute_label_reg_nbr" />

      <TextView
          android:id="@+id/carAttributeRegNbrTv"
          style="@style/AttributeRowValue"
          android:layout_marginBottom="@dimen/attribute_row_bottom_margin"
          android:textAllCaps="true"
          tools:text="RAX123" />

      <TextView
          style="@style/AttributeRowLabel"
          android:text="@string/attribute_label_gearbox_type" />

      <TextView
          android:id="@+id/carAttributeGearboxTv"
          style="@style/AttributeRowValue"
          android:layout_marginBottom="@dimen/attribute_row_bottom_margin"
          tools:text="Automatic" />

      <TextView
          android:id="@+id/carAttributeFueltypeLabel"
          style="@style/AttributeRowLabel"
          android:text="@string/attribute_label_fuel_type" />

      <TextView
          android:id="@+id/carAttributeFuelTypeTv"
          style="@style/AttributeRowValue"
          tools:text="Gasoline" />
    </LinearLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>
